checking if scrollbar width fix has reverted

--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,6 @@ main {
   .main-title {
     height: min-content;
     min-height: min-content;
-    padding-bottom: 5px;
   }
 
   .subtitle {
